// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenSelectButton component should Render correctly 1`] = `
<TouchableOpacity>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f2f3f4",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <EmptyIcon />
    <Text
      bold={false}
      centered={false}
      disclaimer={false}
      green={false}
      link={false}
      modal={false}
      primary={true}
      reset={false}
      right={false}
      small={false}
      strikethrough={false}
      upper={false}
    >
      Select a token
    </Text>
    <Icon
      allowFontScaling={false}
      name="caret-down"
      size={18}
      style={
        Object {
          "color": "#6a737d",
          "marginLeft": 10,
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`TokenSelectButton component should Render correctly 2`] = `
<TouchableOpacity>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f2f3f4",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <RemoteImage
      fadeIn={true}
      source={
        Object {
          "testUri": "../../../app/images/eth-logo.png",
        }
      }
      style={
        Object {
          "height": 24,
          "marginRight": 8,
          "width": 24,
        }
      }
    />
    <Text
      bold={false}
      centered={false}
      disclaimer={false}
      green={false}
      link={false}
      modal={false}
      primary={true}
      reset={false}
      right={false}
      small={false}
      strikethrough={false}
      upper={false}
    >
      ETH
    </Text>
    <Icon
      allowFontScaling={false}
      name="caret-down"
      size={18}
      style={
        Object {
          "color": "#6a737d",
          "marginLeft": 10,
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`TokenSelectButton component should Render correctly 3`] = `
<TouchableOpacity>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f2f3f4",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <EmptyIcon>
      <Text
        bold={false}
        centered={false}
        disclaimer={false}
        green={false}
        link={false}
        modal={false}
        primary={false}
        reset={false}
        right={false}
        small={false}
        strikethrough={false}
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
        upper={false}
      >
        C
      </Text>
    </EmptyIcon>
    <Text
      bold={false}
      centered={false}
      disclaimer={false}
      green={false}
      link={false}
      modal={false}
      primary={true}
      reset={false}
      right={false}
      small={false}
      strikethrough={false}
      upper={false}
    >
      cDAI
    </Text>
    <Icon
      allowFontScaling={false}
      name="caret-down"
      size={18}
      style={
        Object {
          "color": "#6a737d",
          "marginLeft": 10,
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`TokenSelectButton component should Render correctly 4`] = `
<TouchableOpacity>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f2f3f4",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <RemoteImage
      fadeIn={true}
      source={
        Object {
          "uri": "https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ",
        }
      }
      style={
        Object {
          "height": 24,
          "marginRight": 8,
          "width": 24,
        }
      }
    />
    <Text
      bold={false}
      centered={false}
      disclaimer={false}
      green={false}
      link={false}
      modal={false}
      primary={true}
      reset={false}
      right={false}
      small={false}
      strikethrough={false}
      upper={false}
    >
      DAI
    </Text>
    <Icon
      allowFontScaling={false}
      name="caret-down"
      size={18}
      style={
        Object {
          "color": "#6a737d",
          "marginLeft": 10,
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`TokenSelectButton component should Render correctly 5`] = `
<TouchableOpacity
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#f2f3f4",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <RemoteImage
      fadeIn={true}
      source={
        Object {
          "uri": "https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ",
        }
      }
      style={
        Object {
          "height": 24,
          "marginRight": 8,
          "width": 24,
        }
      }
    />
    <Text
      bold={false}
      centered={false}
      disclaimer={false}
      green={false}
      link={false}
      modal={false}
      primary={true}
      reset={false}
      right={false}
      small={false}
      strikethrough={false}
      upper={false}
    >
      DAI
    </Text>
    <Icon
      allowFontScaling={false}
      name="caret-down"
      size={18}
      style={
        Object {
          "color": "#6a737d",
          "marginLeft": 10,
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    />
  </View>
</TouchableOpacity>
`;
